--- a/client/src/components/MusicPlayer/MusicApp.css
+++ b/client/src/components/MusicPlayer/MusicApp.css
@@ -12,21 +12,20 @@
     min-height: 50vh;
 }
 
-.c-player {
+/* .c-player {
     display: block;
     width: 100%;
-}
-
+} */
+/* 
 .c-player > h4 {
     color: rgb(33, 57, 78);
     text-align: center;
     font-size: 20px;
     font-weight: 400;
     text-transform: uppercase;
-}
-.c-player > p {
+} */
+.c-player p {
     color: rgb(134, 129, 182);
-    text-align: center;
     font-size: 14px;
     font-weight: 400;
     text-transform: uppercase;
@@ -100,12 +99,11 @@
 }
 .playerBackground {
     background-image: url(https://media.giphy.com/media/H62NM1ab7wzMXURdoi/giphy.gif);
-    position: absolute; /*matches #content position*/
+    position: absolute;
+    top: 0;
+    left: 0;
     background-repeat: no-repeat;
     background-position: center;
-    width: 300px; /*matches #content width*/
-    height: 100px; /*matches #content height*/
-    -webkit-filter: blur(8px);
-    filter: blur(1px);
-    z-index: -1;
+    width: 100%;
+    height: 200px;
 }
